--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6179,12 +6179,12 @@ iRulu:
 
 # Irbis
 Irbis:
-  regex: 'IRBIS|TZ(1(?:00|42|50|84|65|7[035-89]|9[578])|49|7(?:1[2467]|2[01567]|37|4[257]|5[23457]|62|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|50|51[0147]|531|55[012]))[;)\ ]'
+  regex: 'IRBIS|TZ(1(?:00|42|50|84|65|7[035-89]|9[578])|49|7(?:1[2467]|2[01567]|37|4[257]|5[23457]|62|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))[;)\ ]'
   device: 'tablet'
   models:
     - regex: '(TZ(?:[0-9]+)|TZ(?:one|art|HIT|81L))[;)\ ]'
       model: '$1'
-    - regex: '(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|50|51[0147]|531|55[012]))[;)\ ]'
+    - regex: '(SP[0-9]+)[;)\ ]'
       device: 'smartphone'
       model: '$1'
 
@@ -7985,7 +7985,7 @@ Lingwin:
 
 # Logicom
 Logicom:
-  regex: '(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab 72|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-?EMENT|Le Lift|Le Hola)[_);/ ]'
+  regex: '(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab 72|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-?EMENT|Le[ _](?:Hop|Lift|Hola|LeMoov[2]?|Fit FR|Smooth(?: FR)?))[_);/ ]'
   device: 'tablet'
   models:
     - regex: 'La Tab 72'
@@ -8011,6 +8011,26 @@ Logicom:
       device: 'smartphone'
     - regex: 'Le Hola FR[);/ ]'
       model: 'Le Hola FR'
+    - regex: 'Le[ _]Hola[);/ ]'
+      model: 'Le Hola'
+      device: 'smartphone'
+    - regex: 'LeMoov2[);/ ]'
+      model: 'Le Moov 2'
+      device: 'smartphone'
+    - regex: 'LeMoov[);/ ]'
+      model: 'Le Moov'
+      device: 'smartphone'
+    - regex: 'Le Fit FR[);/ ]'
+      model: 'Le Fit FR'
+      device: 'smartphone'
+    - regex: 'Le Hop[);/ ]'
+      model: 'Le Hop'
+      device: 'smartphone'
+    - regex: 'Le Smooth FR[);/ ]'
+      model: 'Le Smooth FR'
+      device: 'smartphone'
+    - regex: 'Le Smooth[);/ ]'
+      model: 'Le Smooth'
       device: 'smartphone'
 
 # Konka
@@ -9793,7 +9813,7 @@ Oukitel:
 
 # Overmax
 Overmax:
-  regex: 'OV-[a-z]+(?:[^;(/]*)[();/ ]|Qualcore 1010|Vertis 5021 Aim'
+  regex: 'OV-[a-z]+(?:[^;(/]*)[();/ ]|Qualcore 1010|Vertis 5021 Aim|OV1027[34]G'
   device: 'tablet'
   models:
     - regex: 'OV-V10'
@@ -9808,6 +9828,9 @@ Overmax:
 
     - regex: 'Qualcore 1010'
       model: 'Qualcore 1010'
+      device: 'tablet'
+    - regex: 'OV1027([34])G'
+      model: 'Qualcore 1027 $1G'
       device: 'tablet'
 
     - regex: '(OV-[a-z]+(?:[^;(/]*))(?<!Build)[();/ ]'
@@ -12587,7 +12610,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[237]|X[63]|6S))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
+  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[2367]|X[236]|6S|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
   device: 'smartphone'
   models:
     - regex: 'S10_Pro'
@@ -12614,10 +12637,14 @@ Ulefone:
       model: 'Armor 3'
     - regex: 'Armor[ _]7[);\ ]'
       model: 'Armor 7'
-    - regex: 'Armor[ _]X([36])[);\ ]'
+    - regex: 'Armor[ _]X([236])[);\ ]'
       model: 'Armor X$1'
     - regex: 'Armor[ _]6S[);\ ]'
       model: 'Armor 6S'
+    - regex: 'Armor[ _]6[);\ ]'
+      model: 'Armor 6'
+    - regex: 'Armor[ _]X[);\ ]'
+      model: 'Armor X'
     - regex: 'Armor[);\ ]'
       model: 'Armor'
     - regex: 'Gemini Pro[);\ ]'
@@ -13965,7 +13992,7 @@ MLS:
 
 # Fly
 Fly:
-  regex: 'Fly(?!Flow|touch)|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!10[134]0)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?[;)/ ]'
+  regex: 'Fly(?!Flow|touch)|Power Plus 5000|FS50[1-9]|FS51[0-8]|FS52[0-9]|FS530|FS55[134]|FS40[1-9]|FS45[1-9]|4FS06|MERIDIAN-|(?:IQ(?!10[134]0)[0-9]{3,}[i]?)[ _]?(?:Quad|Firebird|Quattro|Turbo|Magic)?[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:Fly_)?IQ310[;)/ ]'
@@ -13974,6 +14001,8 @@ Fly:
 
     - regex: '(?:Fly_)?IQ236[;)/ ]'
       model: 'Victory'
+    - regex: 'Power Plus 5000[;)/ ]'
+      model: 'Power Plus 5000'
     - regex: 'FS506'
       model: 'Cirrus 3'
     - regex: 'FS403'
@@ -14284,7 +14313,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J|Z963U|402ZT|P545|P609)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01J|Z963U|402ZT|P545|P609)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -14370,7 +14399,7 @@ ZTE:
       model: 'Nubia Z11 Max'
     - regex: 'NX529J[);/ ]'
       model: 'Nubia Z11 mini'
-    - regex: 'NX549J[);/ ]'
+    - regex: '(?:NX549J|Nubia Z11 mini S)[);/ ]'
       model: 'Nubia Z11 mini S'
     - regex: 'NX606J[);/ ]'
       model: 'Nubia Z18'
@@ -14458,6 +14487,8 @@ ZTE:
       model: 'Optus X Power 2'
     - regex: 'P609[);/ ]'
       model: 'Optus X Wave'
+    - regex: 'Optus X Start[);/ ]'
+      model: 'Optus X Start'
     - regex: 'Blade (A(0620|310|452|460|462|465|475|510|512|520|530|602|612|910)|L110|V0730|V0800|V580|V1000)[);/ ]'
       model: 'Blade $1'
     - regex: 'Blade L2 Plus[);/ ]'
@@ -15799,7 +15830,7 @@ TD Systems:
 
 # Ravoz
 Ravoz:
-  regex: 'RAVOZ[ _](Z[347])[);/ ]'
+  regex: 'RAVOZ[ _](Z[347]|R[478])[);/ ]'
   device: 'smartphone'
   model: '$1'
 
