--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -6639,3 +6639,24 @@
     model: R8
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; E500A_2019) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4021.0 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 81.0.4021.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: 5E
+    model: E500A (2019)
+  os_family: Android
+  browser_family: Chrome
+
