--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10795,7 +10795,7 @@ Samsung:
       model: 'GALAXY S5 mini'
     - regex: '(?:SAMSUNG-)?SM-G9009D'
       model: 'GALAXY S5 Dual-SIM'
-    - regex: '(?:SAMSUNG-)?SM-(?:G900|G906[KLS])|GALAXY-S5'
+    - regex: '(?:SAMSUNG-)?SM-(?:G900|G906[KLS]|S902L)|GALAXY-S5'
       model: 'GALAXY S5'
     - regex: '(?:SAMSUNG-)?SM-G901F'
       model: 'GALAXY S5 LTE+'
@@ -10873,7 +10873,7 @@ Samsung:
       model: 'GALAXY A3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A320(?:FL|[FYX])'
       model: 'GALAXY A3 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-A500[LSWY]'
+    - regex: '(?:SAMSUNG-)?SM-A500[LSWY]?[);/ ]'
       model: 'GALAXY A5'
     - regex: '(?:SAMSUNG-)?SM-A500[FGHKM0]'
       model: 'GALAXY A5 Duos'
