--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3820,7 +3820,7 @@ Digiland:
 
 # Digma
 Digma:
-  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Octa 80|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](11[459]4MG|1195MG|1196ML|3001ML|500[67]PG|7113PL|7193MG|8209MG|8139ML|8152ML|1050PL|8205PG|7203MG)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
+  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Octa 80|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](11[459]4MG|1195MG|1196ML|3001ML|500[67]PG|7113PL|7193MG|8209MG|8139ML|8152ML|1050PL|8205PG|7203MG)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|LINX A420 3G LS4019PG|LINX A450 3G LT4028PG|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
   device: 'smartphone'
   models:
     - regex: 'HIT(?: 3G)? HT707[10]MG'
@@ -3856,10 +3856,8 @@ Digma:
       model: 'Linx Rage 4G'
     - regex: 'LS5053ML'
       model: 'Linx Pay 4G'
-    - regex: '(Linx A400 3G) LT4001PG'
-      model: '$1'
-    - regex: '(Linx C500 3G) LT5001PG'
-      model: '$1'
+    - regex: 'Linx ([A-Z][0-9]{3}) 3G (?:LT4028PG|LS4019PG|LT4001PG|LT5001PG)'
+      model: 'Linx $1 3G'
     - regex: '(Linx PS474S)'
       model: '$1'
     - regex: 'PT452E'
@@ -9848,14 +9846,14 @@ Ouki:
 
 # Oukitel
 Oukitel:
-  regex: '(?:(?:C15|C16|K10000)[ _]Pro|U20_Plus|Y4800)[ ;/)]'
+  regex: '(?:(?:C15|C16|K10000|K6000)(?:[ _]Pro)|U20_Plus|K4000 Plus|Y4800|K10000|K[67]000)[ ;/)]'
   device: 'smartphone'
   models:
-    - regex: '(C15|C16|K10000)[ _]Pro[ ;/)]'
+    - regex: '(C15|C16|K10000|K6000)[ _]Pro[ ;/)]'
       model: '$1 Pro'
-    - regex: 'U20_Plus[ ;/)]'
-      model: 'U20 Plus'
-    - regex: '(Y4800)[ ;/)]'
+    - regex: '(U20|K4000)[_ ]Plus[ ;/)]'
+      model: '$1 Plus'
+    - regex: '(Y4800|K10000|K[67]000)[ ;/)]'
       model: '$1'
 
 # Overmax
@@ -16127,12 +16125,14 @@ Billion:
 
 # Tele2 (mobile operator)
 Tele2:
-  regex: 'Tele2[ _](?:Mi[dn]i[ _]1[\._]1|Mini)[);/ ]'
+  regex: 'Tele2[ _](?:Mi[dn]i[ _]1[\._]1|Mi[dn]i|Maxi(?:[ _](?:Plus|LTE))?)[);/ ]'
   device: 'smartphone'
   models:
       - regex: 'Tele2[ _]Mini[ _]1[_\.]1[);/ ]'
         model: 'Mini 1.1'
-      - regex: 'Tele2[ _](Midi[ _]1\.1|Mini)[);/ ]'
+      - regex: 'Tele2[ _](Maxi(?:[_ ](?:Plus|LTE))?)[);/ ]'
+        model: '$1'
+      - regex: 'Tele2[ _](Midi[ _]1\.1|Mi[dn]i)[);/ ]'
         model: '$1'
 
 # Alfawise
